--- a/TweetApp-SpringBoot/src/main/resources/applicaton.properties
+++ b/TweetApp-SpringBoot/src/main/resources/applicaton.properties
@@ -1,3 +1,9 @@
+management.endpoints.web.exposure.include=*
+ 
+# To expose only selected endpoints
+#management.endpoints.jmx.exposure.include=health,info,env,beans
+spring.jackson.serialization.indent_output = true
+management.security.enabled=false  
 # logging level
 logging.level.org.springframework=ERROR
 logging.level.com.tweetapp=INFO
